GNOME Bugzilla – Bug 744946
$DISPLAY missing from dbus environment
Last modified: 2015-02-22 21:57:37 UTC
After logging in to an X11 session, bus-activated apps cannot be started (e.g. gnome-terminal) because $DISPLAY is not present in their environment. gdm 3.15.90.3
Fix should be simple. Just need to make sure the x server is spawned before the bus daemon in gdm-x-session.c and set DISPLAY in the DBus GSubProcessLauncher
Created attachment 297605 [details] [review] patch? Tried to fix this, I have no idea what I'm doing but it looks like spawn_bus() is already called after spawn_x_server() so adding the 'setenv's to the former did work for me.
Looks good, thanks !