gdm-x-session: pass display location to dbus-daemon

The DISPLAY and XAUTHORITY environment variables need to be
set in the bus daemon environment so that programs activated via
the session bus can access the display.

https://bugzilla.gnome.org/show_bug.cgi?id=744946